--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
     <groupId>com.tabernastudios.capybarabot</groupId>
     <artifactId>capybarabot</artifactId>
-    <version>1.1</version>
+    <version>1.1b</version>
 
     <repositories>
 
