--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
     <groupId>com.tabernastudios.capybarabot</groupId>
     <artifactId>capybarabot</artifactId>
-    <version>1.1b</version>
+    <version>0.1.1</version>
 
     <repositories>
 
@@ -90,6 +90,12 @@
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
             <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>13.0</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
